# BlackBird

./: .gitignore  BlackBird.jucer  BlackFace.jucer  CMakeLists.txt  README.md  macos_rerun  pre-commit
JUCE/: .gitignore  ChangeList.txt
JUCE/examples/DemoRunner/: DemoRunner.jucer
JUCE/examples/DemoRunner/JuceLibraryCode/: AppConfig.h  JuceHeader.h
JUCE/examples/DemoRunner/Source/: Main.cpp
JUCE/extras/AudioPerformanceTest/: AudioPerformanceTest.jucer
JUCE/extras/AudioPerformanceTest/JuceLibraryCode/: AppConfig.h
JUCE/extras/AudioPerformanceTest/Source/: Main.cpp  MainComponent.h
JUCE/extras/AudioPluginHost/: AudioPluginHost.jucer
JUCE/extras/AudioPluginHost/JuceLibraryCode/: AppConfig.h
JUCE/extras/AudioPluginHost/Source/: HostStartup.cpp
JUCE/extras/BinaryBuilder/: BinaryBuilder.jucer
JUCE/extras/BinaryBuilder/JuceLibraryCode/: AppConfig.h
JUCE/extras/NetworkGraphicsDemo/: NetworkGraphicsDemo.jucer
JUCE/extras/NetworkGraphicsDemo/JuceLibraryCode/: AppConfig.h
JUCE/extras/NetworkGraphicsDemo/Source/: Main.cpp
JUCE/extras/Projucer/: Projucer.jucer
JUCE/extras/Projucer/JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h  Projucer - Shortcut.lnk
JUCE/extras/UnitTestRunner/: UnitTestRunner.jucer
JUCE/extras/UnitTestRunner/JuceLibraryCode/: AppConfig.h
JUCE/extras/UnitTestRunner/Source/: Main.cpp
JUCE/extras/WindowsDLL/: WindowsDLL.jucer
JUCE/extras/WindowsDLL/JuceLibraryCode/: AppConfig.h
JUCE/modules/: JUCE Module Format.txt
JUCE/modules/juce_analytics/: juce_analytics.h
JUCE/modules/juce_audio_basics/utilities/: juce_ADSR.h
JUCE/modules/juce_audio_devices/: juce_audio_devices.h
JUCE/modules/juce_audio_devices/native/: juce_win32_ASIO.cpp
JUCE/modules/juce_audio_formats/: juce_audio_formats.h
JUCE/modules/juce_audio_plugin_client/: juce_audio_plugin_client.h  juce_audio_plugin_client_AU.r  juce_audio_plugin_client_AU_2.mm
JUCE/modules/juce_audio_plugin_client/AU/: juce_AU_Wrapper.mm  juce_AUv3_Wrapper.mm
JUCE/modules/juce_audio_plugin_client/RTAS/: juce_RTAS_MacUtilities.mm
JUCE/modules/juce_audio_plugin_client/Standalone/: juce_StandaloneFilterWindow.h
JUCE/modules/juce_audio_plugin_client/VST/: juce_VST_Wrapper.cpp  juce_VST_Wrapper.mm
JUCE/modules/juce_audio_plugin_client/VST3/: juce_VST3_Wrapper.cpp
JUCE/modules/juce_audio_processors/: juce_audio_processors.h
JUCE/modules/juce_audio_utils/: juce_audio_utils.h
JUCE/modules/juce_audio_utils/gui/: juce_MidiKeyboardComponent.cpp  (+2 more)
JUCE/modules/juce_blocks_basics/: juce_blocks_basics.h
JUCE/modules/juce_box2d/: juce_box2d.h
JUCE/modules/juce_core/: juce_core.cpp  juce_core.h
JUCE/modules/juce_dsp/: juce_dsp.h
JUCE/modules/juce_opengl/: juce_opengl.cpp  juce_opengl.h
JUCE/modules/juce_osc/: juce_osc.h
JUCE/modules/juce_product_unlocking/: juce_product_unlocking.h  juce_product_unlocking.mm
JUCE/modules/juce_video/: juce_video.h
JuceLibraryCode/: AppConfig.h  BinaryData.cpp  BinaryData.h  JuceHeader.h  JucePluginDefines.h
Presets/: Whistler.blackFace
Releases/MacOS/: BlackBird.pkgproj  BlackFace.pkgproj
Releases/Windows/: BlackBird-Win32.iss  BlackBird-x64.iss  BlackFace-Win32.iss  BlackFace-x64.iss
Resources/Presets/: Big Reso.blackFace  Long Attack.blackFace  Long Decay.blackFace  _INIT_.blackBird
Scripts/: build_release_macos.sh  build_release_windows.bat  release_latest.sh  release_macos.sh  sync_projucer_version_with_git.sh
Source/: DSPParameters.cpp  DSPParameters.h  EditorHeader.cpp  EditorHeader.h  Knob.cpp  Knob.h  LookAndFeel.cpp  LookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Section.cpp  Section.h  Synth.cpp  Synth.h  Voice.h
Source/DSP/: DSPParameters.cpp  DSPParameters.h  LookupTablesBank.h  MultibandLookupTable.h  SineSeries.h  Synth.h  Utility.h  VCAOscillator.h  Voice.h
Source/UI/: EditorHeader.cpp  EditorHeader.h  Knob.cpp  Knob.h  LookAndFeel.cpp  LookAndFeel.h  PluginEditor.cpp  PluginEditor.h  Section.cpp  Section.h
docs/_includes/: downloads_buttons.html
docs/_layouts/: home.html
docs/_site/: 404.html  feed.xml  index.html
docs/_site/about/: index.html
docs/_site/assets/: main.css.map
docs/_site/js/: index.js
docs/css/: index.css
releases/macOS/: BlackBird.pkgproj
releases/windows/: BlackBird-Win32.iss  BlackBird-x64.iss
scripts/: build_release_macos.sh  build_release_windows.bat  release_latest.sh  sync_projucer_version_with_git.sh
scripts/aliasing_analysis/: README.md  antiderivatives.ipynb  dsplib.py  environment.yml  learning_antialiasing.ipynb  models.py  models_test.py  nonlinearity.ipynb  plotlib.py  tanh_antiderivative.py  tanh_impact.ipynb  training.py  upsampling.ipynb
source/: PluginProcessor.cpp  PluginProcessor.h
source/dsp/: LadderFilter.cpp  LadderFilter.h  LookupTablesBank.h  MultibandLookupTable.h  SineSeries.h  Synth.h  VCAOscillator.h  Voice.h
source/ui/: EditorHeader.h  LookAndFeel.cpp  LookAndFeel.h  PluginEditor.h  Section.h
(+125 files in other folders)
